// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.execution;

option java_multiple_files = true;

message ExecutionErrorInfo {
  string message = 1;
}
