syntax = "proto3";

package io.harness.pms.contracts.execution.failure;

option java_multiple_files = true;

enum FailureType {
  UNKNOWN_FAILURE = 0;
  DELEGATE_PROVISIONING_FAILURE = 1;
  CONNECTIVITY_FAILURE = 2;
  AUTHENTICATION_FAILURE = 3;
  VERIFICATION_FAILURE = 4;
  APPLICATION_FAILURE = 5;
  AUTHORIZATION_FAILURE = 6;
  TIMEOUT_FAILURE = 7;
}